--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "~2.0",
+        "yiisoft/yii2": "2.1.x-dev",
         "aws/aws-sdk-php": "~3.0"
     },
     "autoload": {
