--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "powerkernel/yii-aws-sns",
     "description": "Amazon Simple Notification Service for Yii",
-    "type": "yii2-extension",
+    "type": "yii-extension",
     "keywords": ["yii","aws","sns"],
     "license": "BSD-3-Clause",
     "authors": [
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "2.1.x-dev",
+        "yiisoft/yii2": "3.0.x-dev",
         "aws/aws-sdk-php": "~3.0"
     },
     "autoload": {
