--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,25 @@
 {
-    "name": "powerkernel/yii-aws-sns",
-    "description": "Amazon Simple Notification Service for Yii",
-    "type": "yii-extension",
-    "keywords": ["yii","aws","sns"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Harry Tang",
-            "email": "harry@powerkernel.com"
-        }
-    ],
-    "require": {
-        "yiisoft/yii2": "3.0.x-dev",
-        "aws/aws-sdk-php": "~3.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "powerkernel\\sns\\": "src"
-        }
+  "name": "powerkernel/yii-aws-sns",
+  "description": "Amazon Simple Notification Service for Yii",
+  "type": "yii-extension",
+  "keywords": [
+    "yii",
+    "aws",
+    "sns"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Harry Tang",
+      "email": "harry@powerkernel.com"
     }
+  ],
+  "require": {
+    "aws/aws-sdk-php": "~3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "powerkernel\\sns\\": "src"
+    }
+  }
 }
